--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - save_cache:
         key: "npm-packages"
         paths:
-          - /src/node_modules
+          - "/src/node_modules"
       - run: npm run lint
   test:
 
