--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - checkout
       - restore_cache:
         keys:
-          - npm-packages
+          - "npm-packages"
       - run: npm i
       - run: npm run test
   analyze:
